samples/_failures_safe/1761718375_3a4cc5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbce2673.c: In function ‘main’:
./samples/SAFE/__tmp_fbce2673.c:164:5: error: expected declaration or statement at end of input
  164 |     int start, end;
      |     ^~~
